[package]
name = "waifu2x-ncnn-vulkan-gui"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
embed-resource = "1.3"

[dependencies]
native-windows-gui = { version = "1.0.12", features = ["flexbox", "high-dpi"] }
native-windows-derive = "1.0.3"
